[package]
name = "update"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"

[dependencies]
bindgen = { version = "0.58", default-features = false, features = ["runtime"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
tokio = "1.0"
